Implement flush function in WinRT file engine

This is needed by the abstract file engine.

Change-Id: Ia7ceca1be59f00a90e96e97ccd394634bad8b02f
Task-number: QTBUG-44969
Reviewed-by: Andrew Knight <qt@panimo.net>

cregit: c5fd30b28561ffda729ffa016aed2cd216e44236 https://github.com/qt/qtbase/commit/c5fd30b28561ffda729ffa016aed2cd216e44236